fixed accessibility errors contrast errors and footer

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
   }
-  
+
   body {
     font-family: 'Lato', 'Roboto', sans-serif;
     text-align: center;
@@ -31,6 +31,13 @@
     border: 0;
   }
   
+  .copyright{
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+  }
+
   /* @media only screen and (min-width: 320px) { */
   ul {
     list-style: none;
@@ -105,10 +112,14 @@
     color: #D33326;
   }
   
+
   footer{
-    font-size: 10px;
+    font-size: 12px;
     background-color:#352723;
-    margin: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     color: white;
   }
 
@@ -117,10 +128,14 @@
     font-size: 30px;
   }
 
-  form{
+  fieldset{
+    border: 0;
+    padding: 0;
+    margin: 0;
+    min-width: 0;
     display: inline-grid;
     padding-top: 40px;
-  } 
+  }
 
   .hidden{
     display: none;
@@ -215,18 +230,9 @@
       font-size: 13px;
       text-decoration: underline;
     }
-
-    footer{
-      padding-top: 2px;
-      padding-bottom: 2px;
-    }
     
     .presentation{
       max-width: fit-content;
-    }
-
-    form{
-      padding-top: 30px;
     }
   }  
   
